# SpaceGameProtoype

./: .env  .gitignore  CMakeLists.txt  README.md  install.sh  run.sh
include/: Application.h  Galaxy.h  Game.h  GameObject.h  GameScene.h  GameSettings.h  Planet.h  PlayerShip.h  Renderer.h  SpaceScene.h
include/assets/: Galaxy.h  Planet.h  PlanetTypes.h  PlanetUtils.h  PlayerShip.h
include/core/debug/: Debug.h
include/core/renderer/: Renderer.h  RendererEntry.h
include/core/statemachine/: StateMachine.h
include/resources/: ResourceInventory.h  ResourceType.h
include/scenes/: GameScene.h  PlanetScene.h  SpaceScene.h
include/ui/: GalaxyJumpUI.h  ResourceOverlay.h  UIButton.h
include/utils/: AssetUtils.h  RandomUtils.h
src/: Application.cpp  Galaxy.cpp  Game.cpp  GameSettings.cpp  Planet.cpp  PlayerShip.cpp  Renderer.cpp  SpaceScene.cpp  main.cpp
src/assets/: Galaxy.cpp  Planet.cpp  PlanetTypes.cpp  PlanetUtils.cpp  PlayerShip.cpp
src/core/debug/: Debug.cpp
src/core/renderer/: Renderer.cpp  RendererEntry.cpp
src/core/statemachine/: StateMachine.cpp
src/resources/: ResourceInventory.cpp  ResourceType.cpp
src/scenes/: SpaceScene.cpp
src/ui/: GalaxyJumpUI.cpp  ResourceOverlay.cpp  UIButton.cpp
src/utils/: AssetUtils.cpp  RandomUtils.cpp
